feat: implement background change

--- a/eco-sounds/index.html
+++ b/eco-sounds/index.html
@@ -15,12 +15,12 @@
           </div>
           <nav class="navigation">
             <ul class="navigation__list">
-              <li class="navigation__item">Thrush</li>
-              <li class="navigation__item">Forest</li>
-              <li class="navigation__item">Lark</li>
-              <li class="navigation__item">Warbler</li>
-              <li class="navigation__item">Nightingale</li>
-              <li class="navigation__item">Robin</li>
+              <li class="navigation__item"><button class="navigation__button" data-name="forest">Forest</button></li>
+              <li class="navigation__item"><button class="navigation__button" data-name="thrush">Thrush</button></li>
+              <li class="navigation__item"><button class="navigation__button" data-name="lark">Lark</button></li>
+              <li class="navigation__item"><button class="navigation__button" data-name="warbler">Warbler</button></li>
+              <li class="navigation__item"><button class="navigation__button" data-name="nightingale">Nightingale</button></li>
+              <li class="navigation__item"><button class="navigation__button" data-name="robin">Robin</button></li>
             </ul>
           </nav>
         </div>
